--- a/package.json
+++ b/package.json
@@ -3,13 +3,9 @@
   "version": "1.0.0",
   "description": "Simple js framework",
   "main": "./src/index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "author": "bdvllrs",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.3",
-    "tapir": "^0.1.0"
+    "express": "^4.16.3"
   }
 }
