add sockets + MongoDB connections

--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
-    "mustache": "^2.3.0"
+    "mongoose": "^5.0.17",
+    "mustache": "^2.3.0",
+    "socket.io": "^2.1.0"
   }
 }
